--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang='en'>
 <head>
   <meta charset='UTF-8'>
-  <title>Runs</title>
+  <title>Abrokwa's Run Gallery</title>
   <script src='//d3js.org/d3.v3.min.js'></script>
-  <script src='//api.tiles.mapbox.com/mapbox.js/plugins/turf/v2.0.0/turf.min.js'></script>
   <style>
     body {
       font-family: 'Courier New', Courier, monospace;
