--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       margin-right: 5px;
       margin-top: 5px;
     }
+    .ls {
+      stroke: #000;
+      stroke-width: 0.5px;
+      fill: none;
+    }
     .container {
       margin-left: auto;
       margin-right: auto;
